--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "geist": "^1.3.1",
     "next": "14.2.7",
+    "next-mdx-remote": "^5.0.0",
+    "nodemailer": "^6.9.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "shiki": "^1.15.2"
   },
   "devDependencies": {
     "@types/node": "^20",
