--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "rehype-stringify": "^10.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
-    "shiki": "^1.15.2"
+    "shiki": "^1.15.2",
+    "ts-pattern": "^5.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
