--- a/package.json
+++ b/package.json
@@ -9,22 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.7",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
+    "github-slugger": "^2.0.0",
     "next": "14.2.7",
-    "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.14.0",
+    "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
     "shiki": "^1.15.2",
-    "ts-pattern": "^5.3.1"
+    "ts-pattern": "^5.3.1",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
