--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
+    "@next/env": "^14.2.7",
     "@next/mdx": "^14.2.7",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.33.0",
     "geist": "^1.3.1",
     "github-slugger": "^2.0.0",
     "next": "14.2.7",
     "nodemailer": "^6.9.14",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.0",
@@ -39,6 +43,7 @@
     "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.0",
     "commitizen-emoji": "^1.0.5",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
