--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
     env_file:
       - .env.local
     volumes:
-      - ./postgres/data:/var/lib/postgresql/data
+      - ./seeds:/var/lib/postgresql/data
